Fixed header issue, overlapping content

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,7 @@ h1, h2, h3, h4, p{
 
 #app-header{
   position: fixed;
+  z-index: 2;
   box-shadow: 2px 0 15px var(--main-text);
 }
 
